--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,14 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.vanderkast.primes.ConsoleApp'
+        )
+    }
+}
+
 dependencies {
     def JUNIT = '5.7.0'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: JUNIT
