--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,5 @@
-plugins {
-    id 'java'
-}
-
-group 'com.vanderkast.primes'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'com.vanderkast.primes.ConsoleApp'
-        )
+task test {
+    subprojects {
+        prj -> test.dependsOn "${prj.path}:test"
     }
-}
-
-dependencies {
-    def JUNIT = '5.7.0'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: JUNIT
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT
-    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-}
-
-test {
-    useJUnitPlatform()
 }
